force-app/main/default/objects/Platform_Event_Log__c/Platform_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Stores all received Platform Event data for monitoring and auditing purposes. Supports Standard Platform Events, Change Data Capture events, and Custom Platform Events.</description>
    <label>Platform Event Log</label>
    <nameField>
        <displayFormat>PEL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>