force-app/main/default/objects/Platform_Event_Log__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>For Change Data Capture events: the type of DML operation that triggered the event.</description>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>UNDELETE</fullName>
            </value>
            <value>
                <fullName>GAP_CREATE</fullName>
            </value>
            <value>
                <fullName>GAP_UPDATE</fullName>
            </value>
            <value>
                <fullName>GAP_DELETE</fullName>
            </value>
            <value>
                <fullName>GAP_UNDELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>