force-app/main/default/objects/Platform_Event_Log__c/fields/Changed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Changed_Fields__c</fullName>
    <description>For Change Data Capture events: comma-separated list of field API names that changed in this DML operation.</description>
    <label>Changed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>