force-app/main/default/objects/Platform_Event_Log__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>The CometD subscription channel path (e.g. /event/MyEvent__e or /data/AccountChangeEvent).</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>