force-app/main/default/objects/Platform_Event_Log__c/fields/Commit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Commit_Timestamp__c</fullName>
    <description>For Change Data Capture events: the epoch timestamp (milliseconds) when the transaction was committed to the database.</description>
    <label>Commit Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>