force-app/main/default/objects/Platform_Event_Log__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>For Change Data Capture events: the SObject entity type that changed (e.g. Account, Contact, Opportunity).</description>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>