force-app/main/default/objects/Platform_Event_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Stores any error details that occurred during event processing. Populated when Subscription Status is Error.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>