force-app/main/default/objects/Platform_Event_Log__c/fields/Event_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_API_Name__c</fullName>
    <description>The API name of the platform event (e.g. MyEvent__e, LoginEvent, AccountChangeEvent).</description>
    <label>Event API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>