force-app/main/default/objects/Platform_Event_Log__c/fields/Event_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Published_Date__c</fullName>
    <description>Timestamp when the platform event was originally published (maps to CreatedDate in the event payload).</description>
    <label>Event Published Date</label>
    <type>DateTime</type>
</CustomField>