force-app/main/default/objects/Platform_Event_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Category of the platform event: Standard Platform Event, Change Data Capture, or Custom Platform Event.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Platform Event</fullName>
            </value>
            <value>
                <fullName>Change Data Capture</fullName>
            </value>
            <value>
                <fullName>Standard Platform Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>