force-app/main/default/objects/Platform_Event_Log__c/fields/Event_UUID__c.field-meta.xml
<CustomField>
    <fullName>Event_UUID__c</fullName>
    <description>Unique identifier for this platform event instance, generated at subscription time.</description>
    <externalId>true</externalId>
    <label>Event UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>