force-app/main/default/objects/Platform_Event_Log__c/fields/Header_Data__c.field-meta.xml
<CustomField>
    <fullName>Header_Data__c</fullName>
    <description>The complete CometD message envelope JSON including channel, clientId, and all metadata headers.</description>
    <label>Header Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>