force-app/main/default/objects/Platform_Event_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The full JSON payload of the platform event including all custom and standard fields. Rendered by the JSON Viewer LWC.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>