force-app/main/default/objects/Platform_Event_Log__c/fields/Published_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Published_By_ID__c</fullName>
    <description>Salesforce User or System ID that published the platform event (maps to CreatedById in the event payload).</description>
    <label>Published By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>