force-app/main/default/objects/Platform_Event_Log__c/fields/Replay_ID__c.field-meta.xml
<CustomField>
    <fullName>Replay_ID__c</fullName>
    <description>The CometD replay ID assigned by Salesforce for event replay. Use -1 for tip, -2 for all retained events.</description>
    <label>Replay ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>