force-app/main/default/objects/Platform_Event_Log__c/fields/Schema_ID__c.field-meta.xml
<CustomField>
    <fullName>Schema_ID__c</fullName>
    <description>The Avro schema ID associated with this event. Used to identify the event schema version.</description>
    <label>Schema ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>