force-app/main/default/objects/Platform_Event_Log__c/recordTypes/Change_Data_Capture.recordType-meta.xml
<RecordType>
    <fullName>Change_Data_Capture</fullName>
    <active>true</active>
    <description>Record type for Change Data Capture events. Highlights entity name, change type, changed fields, commit timestamp, and the full change payload.</description>
    <label>Change Data Capture</label>
</RecordType>