force-app/main/default/objects/Platform_Event_Log__c/recordTypes/Custom_Platform_Event.recordType-meta.xml
<RecordType>
    <fullName>Custom_Platform_Event</fullName>
    <active>true</active>
    <description>Record type for user-defined platform events (API names ending in __e). Highlights event payload, subscription status, and any processing errors.</description>
    <label>Custom Platform Event</label>
</RecordType>