force-app/main/default/objects/Platform_Event_Log__c/recordTypes/Standard_Platform_Event.recordType-meta.xml
<RecordType>
    <fullName>Standard_Platform_Event</fullName>
    <active>true</active>
    <description>Record type for standard Salesforce-delivered platform events (LoginEvent, ApiEvent, etc.). Highlights channel, replay ID, publisher information, header data, and payload.</description>
    <label>Standard Platform Event</label>
</RecordType>